[project]
name = "job"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apify-client>=2.2.1",
    "google-genai>=1.47.0",
    "google-generativeai>=0.8.5",
    "openai>=2.6.1",
    "pymupdf>=1.26.5",
    "python-dotenv>=1.2.1",
    "streamlit>=1.51.0",
]
